--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,42 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#chat-bot {
+  height: auto;
+  width: 400px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px 5px #000;
+}
+
+#chat-bot-header {
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  background: #000;
+  font-weight: 400;
+  width: 400px;
+  height: 80px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
 }
 
 #chat-bot-title {
-
+  display: block;
+  color: #fff;
+  text-shadow: 2px 2px 5px #ffffff;
+  padding: 0 5px;
+  border-radius: 0.375rem;
 }
 
 #chat-bot-logo {
@@ -13,21 +45,75 @@
 }
 
 #chat-bot-content {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  background: #fff6f6
+}
 
+#message-box {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  border-radius: 25px;
+  width: 95%;
+  background: #fff;
+  height: 45px;
+  gap: 10px;
+  padding: 0 5px;
+  box-shadow: 2px 2px 10px 2px #ffffff65;
 }
 
 #chat-bot-footer {
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 70px;
+  background: #000;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  
 }
 
 #send-arquive {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: none;
+}
 
+#send-arquive:hover {
+  background: #dddddda9;
 }
 
 #send-message {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: none;
+}
 
+#send-message:hover {
+  background: #dddddda9;
 }
 
 #user-message {
+  border: none;
+  height: 45px;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 400;
+  width: 80%;
+  border-radius: 25px;
+}
 
+#user-message:hover {
+  background: #dddddda9;
+}
+
+#user-message:focus {
+  border: none;
+  outline: none;
 }
