--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ body {
 #chat-bot-header {
   display: flex;
   align-items: center;
-  padding: 0 10px;
+  justify-content: space-between;
+  padding-right: 15px;
   background: #000;
   font-weight: 400;
   width: 400px;
@@ -32,16 +33,36 @@ body {
   border-top-left-radius: 15px;
 }
 
+#chat-bot-header-content {
+  display: flex;
+  align-items: center;
+}
+
+#chat-bot-header-close {
+  padding: 15px;
+  border-radius: 50%;
+  justify-self: end;
+  color: #fff;
+  font-size: 20px;
+  transition: 0.5s;
+}
+
+#chat-bot-header-close:hover {
+  background: #ffffff65
+}
+
 #chat-bot-title {
   display: block;
   color: #fff;
   text-shadow: 2px 2px 5px #ffffff;
-  padding: 0 5px;
   border-radius: 0.375rem;
 }
 
 #chat-bot-logo {
-
+  width: 80px;
+  height: auto;
+  border-radius: 50%;
+  background: #000;
 }
 
 #chat-bot-content {
@@ -49,7 +70,12 @@ body {
   flex-direction: column;
   width: 400px;
   height: 500px;
-  background: #fff6f6
+  background: #000000;
+  background-image: url('imgs/logo-furia.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.1;
 }
 
 #message-box {
