--- a/styles.css
+++ b/styles.css
@@ -69,13 +69,35 @@ body {
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 500px;
+  min-height: 500px;
   background: #000000;
-  background-image: url('imgs/logo-furia.png');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url('imgs/logo-furia.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  opacity: 0.1;
+
+}
+
+.bot-message {
+  margin: 10px 10px;
+  padding: 8px 10px;
+  align-self: flex-start;
+  max-width: 280px;
+  height: auto;
+  background-color: #000;
+  color: #fff;
+  border-radius: 20px;
+}
+
+.user-message {
+  margin: 10px 10px;
+  padding: 8px 10px;
+  align-self: flex-end;
+  max-width: 280px;
+  height: auto;
+  background-color: #fff;
+  color: #000;
+  border-radius: 20px;
 }
 
 #message-box {
@@ -125,7 +147,7 @@ body {
   background: #dddddda9;
 }
 
-#user-message {
+#user-input {
   border: none;
   height: 45px;
   padding: 5px;
@@ -135,11 +157,11 @@ body {
   border-radius: 25px;
 }
 
-#user-message:hover {
+#user-input:hover {
   background: #dddddda9;
 }
 
-#user-message:focus {
+#user-input:focus {
   border: none;
   outline: none;
 }
