--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,25 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
 
+#bot-message-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  max-width: 310px;
+  padding: 5px 10px;
+}
+
+#bot-message-img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
 
 .bot-message {
-  margin: 10px 10px;
+  margin: 10px 5px;
   padding: 8px 10px;
   align-self: flex-start;
   max-width: 280px;
@@ -87,11 +101,12 @@ body {
   background-color: #000;
   color: #fff;
   border-radius: 20px;
+  border-bottom-left-radius: 0;
 }
 
 .user-message {
-  margin: 10px 10px;
-  padding: 8px 10px;
+  margin: 5px 10px;
+  padding: 10px 10px;
   align-self: flex-end;
   max-width: 280px;
   height: auto;
@@ -132,6 +147,14 @@ body {
   border: none;
 }
 
+#attachment-icon {
+  color: #aaa;
+}
+
+#attachment-icon:hover {
+  color: #000;
+}
+
 #send-arquive:hover {
   background: #dddddda9;
 }
@@ -141,6 +164,14 @@ body {
   width: 35px;
   border-radius: 50%;
   border: none;
+}
+
+#arrow-icon {
+  color: #aaa;
+}
+
+#arrow-icon:hover {
+  color: #000;
 }
 
 #send-message:hover {
